--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
+php_flag display_startup_errors on
+php_flag display_errors on
+php_flag html_errors on
+php_flag  log_errors on
+
 RewriteEngine On
+RewriteBase /~wolz/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
